// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Should render body1 1`] = `
<p
  className="font-inter text-dgrey-800 text-left body1"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render body2 1`] = `
<p
  className="font-inter text-dgrey-800 text-left body2"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render caption 1`] = `
<p
  className="font-inter text-dgrey-800 text-left caption"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render disclaimer 1`] = `
<p
  className="font-inter text-dgrey-800 text-left disclaimer"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render div with h1 styles 1`] = `
<div
  className="font-inter text-dgrey-800 text-left h1"
>
  Lorem ipsum dolor sit amet.
</div>
`;

exports[`Typography Should render h1 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h1"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h1 with className bg-red-200 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h1 bg-red-200"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h1 with right alignment 1`] = `
<p
  className="font-inter text-dgrey-800 text-right h1"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h2 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h2"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h3 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h3"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h4 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h4"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h5 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h5"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render h6 1`] = `
<p
  className="font-inter text-dgrey-800 text-left h6"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render hero 1`] = `
<p
  className="font-inter text-dgrey-800 text-left hero"
>
  Lorem ipsum dolor sit amet.
</p>
`;

exports[`Typography Should render subtitle 1`] = `
<p
  className="font-inter text-dgrey-800 text-left subtitle"
>
  Lorem ipsum dolor sit amet.
</p>
`;
